# openarm_mujoco

./: .gitignore  pyproject.toml
src/openarm_mujoco/v2/: __init__.py
v2/: cell.xml
v2/openarm_mujoco_v2/: cell.xml  openarm_v20_bimanual.xml  openarm_v20_bimanual_old_mesh.xml
v2/openarm_mujoco_v2/assets/collision/: link5_part_00.stl  link5_part_01.stl  link5_part_02.stl
v2/openarm_mujoco_v2/assets/visual/: base_link_00.mtl  base_link_01.mtl  ee_base_link_00.mtl  ee_base_link_01.mtl  ee_base_link_02.mtl  finger_inner_00.mtl  finger_inner_01.mtl  finger_inner_02.mtl  finger_outer_00.mtl  finger_outer_01.mtl  finger_outer_02.mtl  link1_00.mtl  link1_01.mtl  link1_02.mtl  link2_00.mtl  link2_01.mtl  link2_02.mtl  link3_00.mtl  link3_01.mtl  link3_02.mtl  link4_00.mtl  link4_01.mtl  link4_02.mtl  link5_00.mtl  link5_01.mtl  link5_02.mtl  link6_00.mtl  link6_01.mtl  link6_02.mtl
v2/openarm_mujoco_v2/assets_old/collision/: base_link.stl  ee_base_link.stl  finger_inner_part_00.stl  finger_inner_part_01.stl  finger_inner_part_02.stl  finger_outer_part_00.stl  finger_outer_part_01.stl  finger_outer_part_02.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5_part_00.stl  link5_part_01.stl  link5_part_02.stl  link6.stl
v2/openarm_mujoco_v2/assets_old/visual/arm/: link5_1.mtl
