# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm_mujoco"
version = "0.2.0"
authors = [{name = "Enactic, Inc."}]
description = "MuJoCo Description Files (MJCF) for OpenArm"
license = {text = "Apache-2.0"}
maintainers = [{name = "Enactic, Inc."}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.6.0",
    "numpy",
    "pip>=26.1.1",
]

[project.urls]
Changelog = "https://github.com/enactic/openarm_mujoco/releases"
Issues = "https://github.com/enactic/openarm_mujoco/issues"
Repository = "https://github.com/enactic/openarm_mujoco.git"

[project.scripts]
openarm-mujoco-launch = "openarm_mujoco.v2.launch:main"

[dependency-groups]
dev = [
    "ruff == 0.14.11", # sync with .pre-commit-config.yaml
]

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]

[tool.setuptools.package-dir]
"" = "src"
"openarm_mujoco.v2" = "v2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openarm_mujoco.v2" = [
    "*.xml",
    "assets/**/*",
]
